Removed {{site.baseurl}} when getting resources

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
   <div class="app-link row 50%">
     <div class="6u">
       <a class="disabled" href="{{ site.app_store_link }}">
-        <img class="app-store-logo" src="{{ site.baseurl }}/images/app-store.png" />
+        <img class="app-store-logo" src="/images/app-store.png" />
       </a>
     </div>
     <div class="6u">
       <a href="{{ site.play_store_link }}">
-        <img class="google-play-logo" src="{{ site.baseurl }}/images/google-play.png" />
+        <img class="google-play-logo" src="/images/google-play.png" />
       </a>
     </div>
   </div>
@@ -19,19 +19,19 @@
   </ul>
   <ul class="copyright">
     <li>&copy; 2015 Letterbox</li>
-    <li><a href="{{ site.baseurl }}">Home</a></li>
-    <li><a href="{{ site.baseurl }}/privacy">Privacy Policy</a></li>
-    <li><a href="{{ site.baseurl }}/eula">EULA</a></li>
+    <li><a href="">Home</a></li>
+    <li><a href="/privacy">Privacy Policy</a></li>
+    <li><a href="/eula">EULA</a></li>
   </ul>
 </section>
 
 <!-- Scripts -->
-<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/js/jquery.scrolly.min.js"></script>
-<script src="{{ site.baseurl }}/js/skel.min.js"></script>
-<script src="{{ site.baseurl }}/js/util.js"></script>
-<!--[if lte IE 8]><script src="{{ site.baseurl }}/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.baseurl }}/js/main.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.scrolly.min.js"></script>
+<script src="/js/skel.min.js"></script>
+<script src="/js/util.js"></script>
+<!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
+<script src="/js/main.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
