--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
   </ul>
   <ul class="copyright">
     <li>&copy; 2015 Letterbox</li>
-    <li><a href="">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="/privacy">Privacy Policy</a></li>
     <li><a href="/eula">EULA</a></li>
   </ul>
