Added Terms of Use

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
     <li>&copy; 2015 Letterbox</li>
     <li><a href="/">Home</a></li>
     <li><a href="/privacy">Privacy Policy</a></li>
-    <li><a href="/eula">EULA</a></li>
+    <li><a href="/terms">Terms of Use</a></li>
   </ul>
 </section>
 
