Added and enabled play store link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       </a>
     </div>
     <div class="6u">
-      <a class="disabled" href="{{ site.play_store_link }}">
+      <a href="{{ site.play_store_link }}">
         <img class="google-play-logo" src="/images/google-play.png" />
       </a>
     </div>
