Add FBOG meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,12 @@
   <link rel="stylesheet" href="/css/main.css" />
   <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
+
+  <!-- Facebook OG Meta -->
+  <meta property="og:url" content="http://getletterbox.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Letterbox: Discover, Answer, Chat" />
+  <meta property="og:description" content="Letterbox is a dating app that enables you to find people with compatible mindsets and opinions." />
+  <meta property="og:image" content="http://getletterbox.com.s3.amazonaws.com/letterbox.jpg" />
 </head>
+
