Add extra backslash to prevent circular redirect

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
   <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
 
   <!-- Facebook OG Meta -->
-  <meta property="og:url" content="http://getletterbox.com" />
+  <meta property="og:url" content="http://getletterbox.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Letterbox: Discover, Answer, Chat" />
   <meta property="og:description" content="Letterbox is a dating app that enables you to find people with compatible mindsets and opinions." />
