--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <section id="footer">
   <div class="app-link row 50%">
     <div class="6u">
-      <a class="disabled" href="{{ site.app_store_link }}">
+      <a href="{{ site.app_store_link }}">
         <img class="app-store-logo" src="/images/app-store.png" />
       </a>
     </div>
