--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,21 @@
 <!-- Footer -->
 <section id="footer">
   <div class="app-link row 50%">
-    <div class="6u">
+    <div class="4u">
       <a href="{{ site.app_store_link }}">
         <img class="app-store-logo" src="/images/app-store.png" />
       </a>
     </div>
-    <div class="6u">
+    <div class="4u">
       <a href="{{ site.play_store_link }}">
         <img class="google-play-logo" src="/images/google-play.png" />
       </a>
     </div>
+    <div class="4u">
+        <a href="{{ site.web_link }}">
+          <img class="web-logo" src="images/web.png" />
+        </a>
+      </div>
   </div>
 
   <ul class="icons">
