basic stats page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,7 @@
 <script src="/js/jquery.scrolly.min.js"></script>
 <script src="/js/skel.min.js"></script>
 <script src="/js/util.js"></script>
+<script src="/js/pykcharts.1.1.0.min.js"></script>
 <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
 <script src="/js/main.js"></script>
 <script>
