--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     </div>
     <div class="4u">
         <a href="{{ site.web_link }}">
-          <img class="web-logo" src="images/web.png" />
+          <img class="web-logo" src="/images/web.png" />
         </a>
       </div>
   </div>
